[gd_scene load_steps=15 format=2]

[ext_resource path="res://Enemies/Cherry Trail/Cheribo/Cheribo.png" type="Texture" id=1]
[ext_resource path="res://Assets/General/Shadows/circle shadow small.png" type="Texture" id=2]
[ext_resource path="res://Scripts/EnemyWander.gd" type="Script" id=4]
[ext_resource path="res://Enemies/PlayerDetection.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/BattleTrigger.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=16]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 8 ), SubResource( 10 ) ],
"loop": true,
"name": "walk_back",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 11 ), SubResource( 13 ) ],
"loop": true,
"name": "walk_front",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=14]
radius = 81.0062

[node name="Cheribo_wander" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, -24 )
scale = Vector2( 1.33998, -1.4054 )
shape = SubResource( 16 )

[node name="CircleShadowSmall" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.352941 )
position = Vector2( 0, -6 )
scale = Vector2( 0.824406, 0.529999 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.972549, 0.988235, 1, 1 )
position = Vector2( 0, -30 )
frames = SubResource( 7 )
animation = "walk_front"
frame = 3
speed_scale = 0.95
playing = true
flip_h = true

[node name="PlayerDetection" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
modulate = Color( 1, 1, 1, 0.254902 )
position = Vector2( -1, -17 )
scale = Vector2( 0.927677, 0.881874 )
shape = SubResource( 14 )

[node name="BattleTrigger" parent="." instance=ExtResource( 6 )]
position = Vector2( -1, -4 )
scale = Vector2( 0.965735, 0.831711 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BattleTrigger"]
position = Vector2( -1.03548, -21.6421 )
scale = Vector2( 1.60839, -1.51859 )
shape = SubResource( 16 )

[connection signal="triggered" from="BattleTrigger" to="." method="_on_BattleTrigger_triggered"]
